--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
-    "jest": "^27.0.5",
-    "@vue-jest": "^5.0.0-0"
+    "jest": "^27.0.5"
   }
 }
